chore(Build): remove Jetty support